manuka - location picker for search frag

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -159,6 +159,12 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_6sdp" />
 
+            <FrameLayout
+                android:id="@+id/frameLayout"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
         </LinearLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
