manuka - design issues fixxed

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -159,11 +159,17 @@
                 android:layout_height="wrap_content"
                 android:padding="@dimen/_6sdp" />
 
-            <FrameLayout
-                android:id="@+id/frameLayout"
-                android:visibility="gone"
+            <androidx.core.widget.NestedScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content">
+
+                <FrameLayout
+                    android:id="@+id/frameLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+            </androidx.core.widget.NestedScrollView>
 
         </LinearLayout>
 
