--- a/app/src/main/res/layout/manuka_ad_menu.xml
+++ b/app/src/main/res/layout/manuka_ad_menu.xml
@@ -31,11 +31,11 @@
                 <TextView
                     android:id="@+id/adMenuBuyNow"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_24sdp"
+                    android:layout_height="@dimen/_28sdp"
                     android:layout_below="@+id/adMenuImage"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginTop="@dimen/_minus24sdp"
-                    android:background="@color/colorGreen"
+                    android:layout_marginTop="@dimen/_minus28sdp"
+                    android:background="@color/mainUiColour"
                     android:fontFamily="sans-serif"
                     android:gravity="center"
                     android:text="Buy Now"
