--- a/app/src/main/res/drawable/button_border_green.xml
+++ b/app/src/main/res/drawable/button_border_green.xml
@@ -9,6 +9,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorGreen" />
+        android:color="@color/colorBlue" />
 
 </shape>
