--- a/app/src/main/res/layout/manuka_activity_advertisement.xml
+++ b/app/src/main/res/layout/manuka_activity_advertisement.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e6ecff"
+    android:background="@color/colorHome"
     android:orientation="vertical"
     tools:context=".ui.advertisement.Advertisement">
 
@@ -33,65 +33,71 @@
                 app:sliderAutoCycleEnabled="true"
                 app:sliderIndicatorAnimationDuration="200"
                 app:sliderIndicatorGravity="center_horizontal|bottom"
-                app:sliderIndicatorOrientation="horizontal"
-                app:sliderIndicatorPadding="3dp"
                 app:sliderIndicatorMargin="@dimen/_4sdp"
+                app:sliderIndicatorOrientation="horizontal"
+                app:sliderIndicatorPadding="@dimen/_4sdp"
                 app:sliderIndicatorRadius="2dp"
+                app:sliderIndicatorSelectedColor="@color/mainUiColour"
+                app:sliderIndicatorUnselectedColor="@color/colorGreyBtn"
                 app:sliderScrollTimeInSec="1"
                 app:sliderStartAutoCycle="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="@dimen/_40sdp"
                 android:orientation="vertical">
 
                 <Button
                     android:id="@+id/adBuyNow"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:drawableStart="@drawable/icon_buy_now_serp"
-                    android:gravity="center" />
+                    android:gravity="center"
+                    android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorWhite"
                     android:orientation="vertical"
-                    android:padding="8dp">
+                    android:padding="@dimen/_8sdp">
 
                     <TextView
                         android:id="@+id/adDetailsTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="@dimen/_8sdp"
                         android:fontFamily="serif"
-                        android:padding="4dp"
+                        android:padding="@dimen/_2sdp"
                         android:textColor="@color/colorBlack"
-                        android:textStyle="bold"
-                        android:textSize="22sp"></TextView>
+                        android:textSize="@dimen/_18sdp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/adDetailsPrice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="10dp"
-                        android:background="@color/colorWarning"
+                        android:layout_marginBottom="@dimen/_6sdp"
+                        android:background="@drawable/ad_price_yellow_frame"
                         android:fontFamily="serif"
-                        android:padding="8dp"
-                        android:textColor="@color/colorBlack"
-                        android:textSize="16sp"></TextView>
+                        android:paddingStart="@dimen/_8sdp"
+                        android:paddingTop="@dimen/_4sdp"
+                        android:paddingEnd="@dimen/_16sdp"
+                        android:paddingBottom="@dimen/_4sdp"
+                        android:textColor="@color/colorBlackText"
+                        android:textSize="@dimen/_14sdp"
+                        android:textStyle="italic" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
+                        android:paddingTop="@dimen/_6sdp"
+                        android:paddingBottom="@dimen/_6sdp"
                         android:text="@string/adForSale"
-                        android:textSize="14sp"></TextView>
+                        android:textSize="@dimen/_12sdp" />
 
                     <View style="@style/Divider" />
 
@@ -99,53 +105,54 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_gravity="center_vertical"
                             android:text="@string/adLocation"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"
-                            android:textStyle="bold"></TextView>
+                            android:textSize="@dimen/_12sdp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingStart="@dimen/_8sdp"
+                            android:paddingEnd="@dimen/_8sdp"
                             android:text="@string/adLocationText"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"></TextView>
-
+                            android:textSize="@dimen/_12sdp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_gravity="center_vertical"
                             android:text="@string/adCondition"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"
-                            android:textStyle="bold"></TextView>
+                            android:textSize="@dimen/_12sdp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/adDetailsCondition"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingStart="@dimen/_8sdp"
+                            android:paddingEnd="@dimen/_8sdp"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"></TextView>
+                            android:textSize="@dimen/_12sdp" />
 
 
                     </LinearLayout>
@@ -153,57 +160,56 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_gravity="center_vertical"
                             android:text="@string/adCategory"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"
-                            android:textStyle="bold"></TextView>
+                            android:textSize="@dimen/_12sdp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/adDetailsCategoryName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingStart="@dimen/_8sdp"
+                            android:paddingEnd="@dimen/_8sdp"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"></TextView>
-
+                            android:textSize="@dimen/_12sdp" />
 
                     </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_gravity="center_vertical"
                             android:text="@string/adPosted"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"
-                            android:textStyle="bold"></TextView>
+                            android:textSize="@dimen/_12sdp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/adDetailsTime"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
+                            android:layout_gravity="center_vertical"
+                            android:paddingStart="@dimen/_8sdp"
+                            android:paddingEnd="@dimen/_8sdp"
                             android:textColor="@color/colorBlack"
-                            android:textSize="14sp"></TextView>
-
+                            android:textSize="@dimen/_12sdp" />
 
                     </LinearLayout>
-
 
                 </LinearLayout>
 
@@ -211,33 +217,36 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="@dimen/_20sdp"
                     android:background="@color/colorWhite"
                     android:orientation="vertical"
-                    android:padding="8dp">
+                    android:padding="@dimen/_8sdp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginTop="@dimen/_4sdp"
                         android:text="@string/adDescription"
                         android:textColor="@color/colorBlack"
-                        android:textSize="14sp"
-                        android:textStyle="bold"></TextView>
+                        android:textSize="@dimen/_12sdp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/adDetailsDescription"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:fontFamily="serif"
                         android:textColor="@color/colorBlack"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="@dimen/_14sdp" />
 
                 </LinearLayout>
 
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
 
     <LinearLayout
@@ -245,31 +254,32 @@
         android:layout_height="wrap_content"
         android:background="@drawable/button_border"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="@dimen/_8sdp">
 
         <Button
             android:id="@+id/adCallNow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="6dp"
+            android:layout_marginEnd="@dimen/_6sdp"
             android:layout_weight="1"
-            android:background="@color/colorGreen"
+            android:background="@color/mainUiColour"
+            android:onClick="onClick"
             android:text="@string/adCall"
             android:textAllCaps="false"
-            android:onClick="onClick"
-            android:textColor="@color/colorWhite"></Button>
+            android:textColor="@color/colorWhite" />
 
         <Button
             android:id="@+id/adChatNow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="6dp"
+            android:layout_marginStart="@dimen/_6sdp"
             android:layout_weight="1"
-            android:background="@color/colorGreen"
+            android:background="@color/mainUiColour"
+            android:onClick="onClick"
             android:text="@string/adChat"
             android:textAllCaps="false"
-            android:onClick="onClick"
-            android:textColor="@color/colorWhite"></Button>
+            android:textColor="@color/colorWhite" />
 
     </LinearLayout>
+
 </LinearLayout>
