--- a/app/src/main/res/layout/manuka_activity_splash_main_app.xml
+++ b/app/src/main/res/layout/manuka_activity_splash_main_app.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#007f63"
+    android:background="@color/mainUiColourDark"
     tools:context=".ui.SplashMainAppActivity">
 
     <LinearLayout
