--- a/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
@@ -68,7 +68,7 @@
                     android:layout_marginBottom="4dp"
                     android:fontFamily="serif"
                     android:textColor="@color/colorBlack"
-                    android:textSize="22sp"
+                    android:textSize="@dimen/_22sdp"
                     android:textStyle="bold"></TextView>
 
                 <TextView
