--- a/app/src/main/res/layout/manuka_fragment_advertisement_details.xml
+++ b/app/src/main/res/layout/manuka_fragment_advertisement_details.xml
@@ -44,7 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:background="@color/colorGreen"
+            android:background="@color/mainUiColour"
             android:text="@string/post_add_image_btn"
             android:textAllCaps="false"
             android:textColor="@color/colorWhite"
