--- a/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
+++ b/app/src/main/res/layout/manuka_fragment_order_phone_verify.xml
@@ -69,7 +69,7 @@
     <LinearLayout
         android:id="@+id/phoneVerifyBtn"
         android:layout_width="match_parent"
-        android:background="@color/colorGreen"
+        android:background="@color/mainUiColour"
         android:orientation="horizontal"
         android:layout_marginTop="20dp"
         android:padding="8dp"
