--- a/app/src/main/res/layout/manuka_activity_category_picker.xml
+++ b/app/src/main/res/layout/manuka_activity_category_picker.xml
@@ -17,9 +17,10 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:paddingStart="@dimen/_4sdp"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_4sdp"
+            android:paddingEnd="@dimen/_4sdp">
 
             <TextView
                 android:id="@+id/all_cat"
@@ -29,7 +30,7 @@
                 android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
                 android:drawablePadding="@dimen/_4sdp"
                 android:padding="@dimen/_12sdp"
-                android:text="Go to all ads"
+                android:text="@string/go_to_all_ads"
                 android:textColor="@color/colorBlackText"
                 android:textSize="@dimen/_14sdp" />
 
