--- a/app/src/main/res/layout/manuka_activity_myadds.xml
+++ b/app/src/main/res/layout/manuka_activity_myadds.xml
@@ -28,8 +28,10 @@
             android:id="@+id/myaddsRecycle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="3dp"></androidx.recyclerview.widget.RecyclerView>
+            android:layout_marginStart="@dimen/_4sdp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginEnd="@dimen/_4sdp" />
+
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </LinearLayout>
